@startuml mediator_discussion_room
title Mediator -- Announcement discussion room

skinparam classAttributeIconSize 0
skinparam backgroundColor white

interface DiscussionRoomMediator {
  + post(announcementId, dto : CommentRequestDTO) : CommentResponseDTO
  + join(announcementId, participant : Participant)
  + leave(announcementId, participant : Participant)
}

class AnnouncementRoom {
  - defaultParticipants : List<Participant>
  - dynamicParticipants : Map<UUID, List<Participant>>
  + post(announcementId, dto) : CommentResponseDTO
  + join(announcementId, participant)
  + leave(announcementId, participant)
  - safeDispatch(participant, comment)
}

interface Participant {
  + onCommentPosted(comment : AnnouncementComment)
  + name() : String
}

class AuthorParticipant {
  + onCommentPosted(comment)
  + name() : String
}

class DashboardParticipant {
  + onCommentPosted(comment)
  + commentsOn(announcementId) : long
  + name() : String
}

class ActivityRelayParticipant {
  + onCommentPosted(comment)
  + name() : String
}

class AnnouncementCommentService <<client>> {
  + addComment(announcementId, dto) : CommentResponseDTO
}

DiscussionRoomMediator <|.. AnnouncementRoom

Participant <|.. AuthorParticipant
Participant <|.. DashboardParticipant
Participant <|.. ActivityRelayParticipant

AnnouncementRoom --> Participant
AnnouncementCommentService --> DiscussionRoomMediator

note right of AnnouncementRoom
  Participants never talk to each other.
  AnnouncementRoom is the single hub
  through which every message travels.
end note

@enduml
